@@ -1390,6 +1390,7 @@ extern "C"
 						PBOOLEAN);
   NTSTATUS NTAPI RtlGetOwnerSecurityDescriptor (PSECURITY_DESCRIPTOR, PSID *,
 						PBOOLEAN);
+  NTSTATUS NTAPI RtlGetVersion (PRTL_OSVERSIONINFOEXW);
   PSID_IDENTIFIER_AUTHORITY NTAPI RtlIdentifierAuthoritySid (PSID);
   VOID NTAPI RtlInitEmptyUnicodeString (PUNICODE_STRING, PCWSTR, USHORT);
   VOID NTAPI RtlInitAnsiString (PANSI_STRING, PCSTR);
